crates/hdk_derive/tests/macros/hdk_to_coordinates_not_enum.stderr
error: The `hdk_to_coordinates` macro can only be used on enums.

         = help: Make this an enum.

 --> tests/macros/hdk_to_coordinates_not_enum.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^^^^^^
