crates/hdk_derive/tests/macros/hdk_to_coordinates_not_enum.rs
use hdk_derive::*;

#[hdk_to_coordinates]
struct Foo;

fn main() {}
